@@ -115,6 +115,7 @@ def types_and_shorthands():
         'ShowFrameDecorations': 'n',
         'SplitAlign': 'n',
         'LayoutAlgorithm': 'n',
+        'TagSelectionStrategy': 'n',
         'TextAlign': 'n',
         'TitleWhen': 'n',
         'font': 'f',
