@@ -18,6 +18,12 @@ Current git version
     window surroundings when there is only one window and one frame in a tag,
     'one_window' and 'off' mirror the old behaviour with regards to 'true' and
     'false'.
+  * New `monitors.tag_selection_strategy` attribute, which can be used to
+    customize how tags are assigned to new monitors. The default `any_unshown` picks 
+    the first available (not yet shown) tag, which is the same behavior as
+    previous releases. `only_empty` makes sure only empty tags are picked for
+    new monitors, while `prefer_empty` prefers empty tags but falls back to any
+    unshown tag if none are empty.
 
 Release 0.9.5 on 2022-07-30
 ---------------------------
